Update URL in configuration file

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: "Crónicas de lo Obsoleto"
 baseurl: "/blog" 
-url: "https://tu-usuario.github.io"
+url: "https://Y3ran.github.io"
 theme: jekyll-theme-primer 
